2016-11-11  Titus Brown  <titus@idyll.org>

  * doc/requirements.txt: set autoprogram version requirements to something
  that works on python 2.7, in order to fix ReadTheDocs builds.

2016-11-10  Camille Scott  <camille.scott.w@gmail.com>

  * lib/assembler.{hh,cc}: add JunctionCountAssembler implementation.
  * lib/kmer_filters.{hh,cc}: add get junction_count_filter function.
  * khmer/{__init__.py,_khmer.cc}: add LinearAssembler,
  SimpleLabeledAssembler, and JunctionCountAssembler to CPython interface.
  * tests/test_assembly.py: minor refactoring, & tests for
  JunctionCountAssembler and newly exposed C++ functions.
  * sandbox/streaming-assembly-simple.py: demo script for streaming assembly.
  * Makefile: update debug flags.
  * lib/{counting.hh,hashtable.{hh,cc},hllcounter.hh,labelhash.hh,
  read_aligner.hh,subset.{hh,cc}}: minor cleanup.
  * tests/test_sandbox_scripts.py: minor cleanup.

2016-11-07  Luiz Irber  <khmer@luizirber.org>

   * Makefile: add --ignore-installed flag to pip install (fix installation
   on conda environments.
   * doc/requirements.txt: change hard requirement to 'newer than', avoid
   installing a quite old setuptools version.

2016-11-04  Tim Head  <betatim@gmail.com>

   * Make khmer's Read type accessible from the python API.

2016-11-03  Titus Brown  <titus@idyll.org>

   * lib/{counting.cc,counting.hh,hashbits.cc,hashbits.hh,hashtable.cc,
   hashtable.hh,storage.cc,storage.hh}: extracted in-memory storage details
   into Storage/Bitstorage/ByteStorage classes.
   * khmer/_khmer.cc,lib/{assembler.cc,assembler.hh,subset.cc,
   subset.hh,labelhash.cc,labelhash.hh,traversal.cc,traversal.hh}: renamed
   Hashtable to Hashgraph.
   * setup.py,lib/Makefile: added storage.{cc,hh} to build.

2016-10-31  Titus Brown  <titus@idyll.org>

   * lib/{counting.hh,hashbits.hh,hashtable.hh}: factor out global functions
   _hash and _revhash into Hashtable methods hash_dna and unhash_dna.